--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   deploy:
     name: Deploy
+    if: contains(github.event.head_commit.message, '[skip deploy]') == false  # Skip deployment if the commit message contains [skip deploy]
     runs-on: ubuntu-latest
 
     permissions:
