--- a/deno.json
+++ b/deno.json
@@ -2,6 +2,7 @@
   "lock": false,
   "tasks": {
     "check": "deno check **/*.ts && deno check **/*.tsx | deno check **/*.tsx && deno fmt --check && deno lint",
+    "debug": "deno run --allow-all --unstable-kv --watch --inspect-wait dev.ts",
     "typecheck": "deno check **/*.ts && deno check **/*.tsx",
     "cli": "echo \"import '\\$fresh/src/dev/cli.ts'\" | deno run --unstable -A -",
     "manifest": "deno task cli manifest $(pwd)",
@@ -20,10 +21,12 @@
   "imports": {
     "$fresh/": "https://deno.land/x/fresh@1.7.3/",
     "@supabase/supabase-js": "jsr:@supabase/supabase-js@^2.46.1",
+    "inversify": "npm:inversify@^6.2.0",
     "preact": "https://esm.sh/preact@10.22.0",
     "preact/": "https://esm.sh/preact@10.22.0/",
     "@preact/signals": "https://esm.sh/*@preact/signals@1.2.2",
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.1",
+    "reflect-metadata": "npm:reflect-metadata@^0.2.2",
     "tailwindcss": "npm:tailwindcss@3.4.1",
     "tailwindcss/": "npm:/tailwindcss@3.4.1/",
     "tailwindcss/plugin": "npm:/tailwindcss@3.4.1/plugin.js",
@@ -31,6 +34,8 @@
   },
   "compilerOptions": {
     "jsx": "react-jsx",
-    "jsxImportSource": "preact"
+    "jsxImportSource": "preact",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   }
 }
