--- a/deno.json
+++ b/deno.json
@@ -6,12 +6,13 @@
     "typecheck": "deno check **/*.ts && deno check **/*.tsx",
     "cli": "echo \"import '\\$fresh/src/dev/cli.ts'\" | deno run --unstable -A -",
     "manifest": "deno task cli manifest $(pwd)",
-    "start": "deno run -A --watch=static/,routes/ dev.ts",
+    "start": "deno run -A --unstable-kv --watch=static/,routes/ dev.ts",
     "build": "deno run -A dev.ts build",
     "preview": "deno run -A main.ts",
     "update": "deno run -A -r https://fresh.deno.dev/update .",
     "dev": "deno run --allow-all --unstable-kv --watch dev.ts"
   },
+  "nodeModulesDir": "auto",
   "lint": {
     "rules": {
       "tags": ["fresh", "recommended"]
