--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,12 +8,15 @@ on:
 jobs:
   deploy:
     name: Deploy
-    if: contains(github.event.head_commit.message, '[skip deploy]') == false  # Skip deployment if the commit message contains [skip deploy]
+    # Skip deployment if the commit message contains [skip deploy]
+    if: contains(github.event.head_commit.message, '[skip deploy]') == false
     runs-on: ubuntu-latest
 
     permissions:
-      id-token: write # Needed for auth with Deno Deploy
-      contents: read # Needed to clone the repository
+      # Needed for auth with Deno Deploy
+      id-token: write
+      # Needed to clone the repository
+      contents: read
 
     steps:
       - name: Clone repository
@@ -33,5 +36,3 @@ jobs:
           project: "quotesaver"
           entrypoint: "./main.ts"
           root: ""
-          
-          
